--- a/yas/yas.vcxproj
+++ b/yas/yas.vcxproj
@@ -64,6 +64,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="allocate.c" />
+    <ClCompile Include="error.c" />
+    <ClCompile Include="yas.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="allocate.h" />
+    <ClInclude Include="error.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
