--- a/yas/yas.vcxproj
+++ b/yas/yas.vcxproj
@@ -67,12 +67,14 @@
     <ClCompile Include="allocate.c" />
     <ClCompile Include="error.c" />
     <ClCompile Include="input.c" />
+    <ClCompile Include="scan.c" />
     <ClCompile Include="yas.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="allocate.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="scan.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
