--- a/yas/yas.vcxproj.filters
+++ b/yas/yas.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="input.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="scan.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="error.h">
@@ -36,6 +39,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="input.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="scan.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
