--- a/yas/yas.vcxproj.filters
+++ b/yas/yas.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="scan.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="atom.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="hashtab.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="error.h">
@@ -42,6 +48,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="scan.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="atom.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="hashtab.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
