--- a/yas/yas.vcxproj
+++ b/yas/yas.vcxproj
@@ -80,6 +80,9 @@
     <ClInclude Include="input.h" />
     <ClInclude Include="scan.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="instrinfo.def" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
